Mobile UI: overflow--issue--margin-left-and-right

--- a/style.css
+++ b/style.css
@@ -134,7 +134,8 @@ button:hover{
     }
     .container{
         width: 80%;
-        margin: 10px;
+        margin-right: 10px;
+        margin-left: 10px;
         padding: 10px;
     }
     .inputs{
